WIP 0.9.9 - [x] add link to switch between byChunk and not - [x] generate both byChunk and not schedules html files - [x] color byChunk schedule with available chunks - [x] click to open image - [x] classes to highlight available segments - [x] integrate listen to available recordings - [x] add tooltips for play buttons - [x] fix semi-transparent header and OpenPlayer look - [x] optimize schedule pictures with thumbnails - [x] bugfix in genHtml where same program image was generated multiple times (1 per startTime withing the segment) - [x] add --rebuildThumbnails to (re)generate only thumbnails by week - [x] XHR check previous and next week's folder to avoid invalid links - [x] add lazy load images - [x] integrate mp3 player: OpenPlayerJS - [x] integrate closed-captions - [ ] enable closed-captions by default: nothing works, asked on stackoverflow     modified:   BiasBuster-whisper.cmd     modified:   KJZZ-db.py     modified:   README.md     modified:   kjzz/KJZZ-schedule.xlsx     modified:   .gitignore     modified:   KJZZ-db.py     modified:   README.md     modified:   BiasBuster-whisper.cmd     modified:   KJZZ-db.py     modified:   README.md     modified:   kjzz/OpenPlayerJS.js     modified:   kjzz/style.css     modified:   kjzz/ui.js

--- a/kjzz/style.css
+++ b/kjzz/style.css
@@ -1,8 +1,19 @@
 body {
   color: #434343;
 }
-table #audio {
-  position: sticky;   /* freeze top row */
+.audio {
+  width: 100%;
+  position: fixed;
+  /* height: 30px; */ /* no need if mode=responsive */
+  left:0;
+  bottom:0;
+}
+.video {
+  width: 100%;
+  position: fixed;
+  height: 80px;
+  left:0;
+  bottom:0;
 }
 i {
   cursor: pointer;
@@ -22,12 +33,13 @@ table {
   border-spacing: 0;
   border-color: 0;
   font-family: sans-serif;
-  margin: 0;
-  padding: 0;
+  /* margin: 0; */
+  /* padding: 0; */
   font-size: 11px;
   line-height: 1.4;
   text-align: center;
   position: relative;   /* freeze top row */
+  margin-bottom: 30px;
 }
 tr td {
   border: 1px solid #DDD;
